--- a/src/components/CodeActivity.astro
+++ b/src/components/CodeActivity.astro
@@ -2,6 +2,7 @@
 import { SplashKitOnlineURL } from '/src/components/SplashKitOnlineConstants'
 
 import type { Props } from "@astrojs/starlight/props";
+import { Icon } from '@astrojs/starlight/components';
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
 const { header, projectName, resources, maxCodeHeight = 600, outputHeight = 300} = Astro.props;
@@ -13,12 +14,15 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
   <AccordionItem header={header}>
 
 <div class="ide-embed-container">
+    <a class="open-in-ide-button" target="_blank" title="Open in full IDE">
+        <Icon name="external" color="inherit;" size="2rem" />
+    </a>
     <iframe id={iFrameID} data-src={SplashKitOnlineURL+"?language=C++&defaultInitializeProject=off&cleanProject=on&useEmbeddedInterface=on&initializeProjectName=."+projectName} class="ide-embed"/>
 </div>
 
 <div style="display:none;" id={codeSnippetID}><slot /></div>
 
-<script data-codesnippetid={codeSnippetID} data-iframeid={iFrameID} data-maxcodeheight={maxCodeHeight} data-outputheight={outputHeight}, data-resources={resources}>
+<script data-codesnippetid={codeSnippetID} data-iframeid={iFrameID} data-maxcodeheight={maxCodeHeight} data-outputheight={outputHeight}, data-resources={resources}, data-projectname={projectName}>
     let scriptData = document.currentScript.dataset;
 
     let SKO = document.getElementById(scriptData.iframeid);
@@ -98,6 +102,32 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
                         });
                     }
                 }
+                if (event.data.event === 'ProjectLoaded') {
+                    // fill "Open in full IDE" button with project ID
+                    let button = SKO.parentElement.getElementsByTagName("a")[0];
+                    button.href = "/book/appendix/online-ide/?project="+event.data.projectID;
+
+                    // By default we create hidden projects (prepending a `.` to the project name)
+                    // If the user wants to experiment further, we should make it a real project
+                    // and rename it so they can load it later on from the IDE
+                    button.addEventListener("click", function(){
+                        sendMessage({
+                            eventType: 'RenameProject',
+                            name: scriptData.projectname
+                        });
+
+                        sendMessage({
+                            eventType: 'ShowMessage',
+                            title: "Opened in IDE",
+                            message: "This project has been loaded in the full IDE.\nPlease reload the page to use the embedded version again.",
+                            block: true // ensure the user can't interact anymore
+                        });
+                    });
+                    // ensure they left click (opening from context menu can't be detected...)
+                    button.addEventListener("contextmenu", function(event){
+                        event.preventDefault();
+                    });
+                }
             }
         });
     }
@@ -121,6 +151,21 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
         height: 100% !important;
         box-shadow: var(--sl-shadow-md);
         border-radius: 0.6rem;
+    }
+    .open-in-ide-button {
+        position: absolute;
+        top: 0.5em;
+        right: 0.5em;
+        border: none;
+        background: none !important;
+        --sl-icon-color: var(--sl-color-accent);
+        cursor: pointer;
+    }
+    .open-in-ide-button:hover {
+        --sl-icon-color: var(--sl-color-accent-high);
+    }
+    svg{
+        transition: color 0.3s;
     }
 </style>
 
