--- a/src/components/CodeActivity.astro
+++ b/src/components/CodeActivity.astro
@@ -1,9 +1,10 @@
 ---
 import { SplashKitOnlineURL } from '/src/components/SplashKitOnlineConstants'
+
 import type { Props } from "@astrojs/starlight/props";
 import { Accordion, AccordionItem } from 'accessible-astro-components'
-const { header, projectName, resources, maxCodeHeight = 600, outputHeight = 300} = Astro.props;
 
+const { header, projectName, resources, maxCodeHeight = 600, outputHeight = 300} = Astro.props;
 
 const codeSnippetID = `code-activity-${crypto.randomUUID()}`
 const iFrameID = `code-activity-${crypto.randomUUID()}`
@@ -11,7 +12,9 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
 <Accordion>
   <AccordionItem header={header}>
 
-<iframe style="opacity: 0;" id={iFrameID} data-src={SplashKitOnlineURL+"?language=C++&useEmbeddedInterface=on&projectID="+projectName} class="ide-embed"/>
+<div class="ide-embed-container">
+    <iframe id={iFrameID} data-src={SplashKitOnlineURL+"?language=C++&defaultInitializeProject=off&cleanProject=on&useEmbeddedInterface=on&initializeProjectName=."+projectName} class="ide-embed"/>
+</div>
 
 <div style="display:none;" id={codeSnippetID}><slot /></div>
 
@@ -58,35 +61,39 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
     const line_height = 19.5; /* computed from the IDE page */
     let approximateCodeHeight = line_height * (codeSnippet.split("\n").length + 1);
     let finalIFrameHeight = Math.min(approximateCodeHeight, parseFloat(scriptData.maxcodeheight)) + parseFloat(scriptData.outputheight);
-    SKO.style.height = `${finalIFrameHeight}px`;
+    SKO.parentElement.style.height = `${finalIFrameHeight}px`;
 
 
     async function loadAndShowIDE(){
         SKO.src = SKO.dataset.src;
-        SKO.style.opacity = "1";
+        SKO.parentElement.style.opacity = "1";
 
         let resources = undefined;
         if (scriptData.resources){
             resources = [{data: await (await fetch(scriptData.resources)).arrayBuffer()}];
         }
 
+        function sendMessage(message){
+            SKO.contentWindow.postMessage(message, '*');
+        }
+
         // Initialize the window with the code + editable code blocks (if there are any)
         window.addEventListener('message', function(event) {
-            if (event.data.type === 'SplashKitOnlineListening') {
-                const message = {
-                    eventType: 'InitializeProjectFromOutsideWorld',
-                    files: [{ path: '/code/main.cpp', data: codeSnippet }],
-                    zips: resources,
-                };
-                SKO.contentWindow.postMessage(message, '*');
+            if (event.data.type === 'SplashKitOnline') {
+                if (event.data.event === 'Listening') {
+                    sendMessage({
+                        eventType: 'ImportFiles',
+                        files: [{ path: '/code/main.cpp', data: codeSnippet }],
+                        zips: resources,
+                    });
 
-                if (blocks.length > 0){
-                    const message = {
-                        eventType: 'EnterBlockEditMode',
-                        files: [{ path: '/code/main.cpp', blocks: blocks }],
-                        styles: ["highlight"],
-                    };
-                    SKO.contentWindow.postMessage(message, '*');
+                    if (blocks.length > 0){
+                        sendMessage({
+                            eventType: 'EnterBlockEditMode',
+                            files: [{ path: '/code/main.cpp', blocks: blocks }],
+                            styles: ["highlight"],
+                        });
+                    }
                 }
             }
         });
@@ -100,12 +107,17 @@ const iFrameID = `code-activity-${crypto.randomUUID()}`
 </script>
 
 <style>
+    .ide-embed-container {
+        opacity: 0; /*starts off hidden and fades in*/
+        transition: opacity 3s;
+        position: relative;
+    }
     .ide-embed {
-        border:0;
-        width:100%;
+        border: 0;
+        width: 100%;
+        height: 100% !important;
         box-shadow: var(--sl-shadow-md);
         border-radius: 0.6rem;
-        transition: opacity 4s;
     }
 </style>
 
