--- a/src/components/InlineTextOption.astro
+++ b/src/components/InlineTextOption.astro
@@ -14,20 +14,22 @@ const key = Math.random().toString();
         display: inline;
         border: solid 1px #aad7a061;
         border-radius: 0.4em;
-        background-color: #2c3729;
+        background-color: var(--ec-frm-trmBg);
         cursor: pointer;
         transition: color 0.3s, background-color 0.3s;
+        white-space: nowrap;
     }
 
     input{
-    margin: 0em 1em 0em 0em;
+        margin: 0em 1em 0em 0em;
     }
     [data-is-inline-text-option]{
         display: none;
     }
     input:checked + label {
         background-color: #aad7a0;
-        color: black;
+        border: solid 1px #30762161;
+        color: var(--sl-color-text-invert);
     }
 
     .join-next {
