--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -25,8 +25,12 @@ const { onNextTest="true", id="" } = Astro.props;
         width: 100%;
         box-sizing: border-box;
         margin-top: 0!important;
-        align-self: center;
-        padding: 0em 1em;
+        padding: 0em 0.5em;
+
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
     }
 
     button.arrow:hover {
