--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -846,6 +846,76 @@ body .accordion__item {
   }
 }
 
+/* --- START: More Accordion Styling ------*/
+/* Mostly copied from Astro's default styling for <details> and <summary> */
+
+/* Remove button formatting*/
+.accordion__header {
+  background: none !important;
+  border: none !important;
+  font-size: 1rem !important;
+  padding: 0 !important;
+  padding-inline-start: 1rem !important;
+  justify-content: initial !important;
+}
+.accordion__header:focus {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+/* Side line & arrow*/;
+.accordion__item {
+  --sl-details-border-color: var(--sl-color-gray-5);
+  --sl-details-border-color--hover: var(--sl-color-text-accent);
+  border-inline-start: 2px solid var(--sl-details-border-color) !important;
+  justify-content: initial !important;
+}
+.accordion__item:hover{
+  border-color: var(--sl-details-border-color--hover) !important;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .accordion__header::before {
+    transition: transform 0.2s ease-in-out;
+  }
+}
+
+.accordion__header[aria-expanded="true"]::before {
+  transform: rotateZ(90deg);
+}
+
+.accordion__header::before {
+  --sl-details-marker-size: 1.25rem;
+
+  background-color: currentColor;
+  content: '';
+  display: inline-block;
+  height: var(--sl-details-marker-size);
+  width: var(--sl-details-marker-size);
+  margin-inline: calc((var(--sl-details-marker-size) / 4) * -1) 0.25rem;
+  vertical-align: middle;
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M14.8 11.3 10.6 7a1 1 0 1 0-1.4 1.5l3.5 3.5-3.5 3.5a1 1 0 0 0 0 1.4 1 1 0 0 0 .7.3 1 1 0 0 0 .7-.3l4.2-4.2a1 1 0 0 0 0-1.4Z'/%3E%3C/svg%3E%0A");
+  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M14.8 11.3 10.6 7a1 1 0 1 0-1.4 1.5l3.5 3.5-3.5 3.5a1 1 0 0 0 0 1.4 1 1 0 0 0 .7.3 1 1 0 0 0 .7-.3l4.2-4.2a1 1 0 0 0 0-1.4Z'/%3E%3C/svg%3E%0A");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+}
+
+/* hide accordion's toggle "+" */
+.header__toggle-indicator{
+  display: none !important;
+}
+
+/* spacing fix */
+.accordion__panel{
+  margin-top: 0px !important;
+  .panel__inner{
+    margin-top: 1em;
+  }
+}
+
+
+/* --- END: More Accordion Styling ------*/
+
 /* ------------------------------------------- */
 /* END:   CUSTOM STYLES                        */
 /* - Don't delete this section                 */
