--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -174,6 +174,10 @@ html[data-theme="dark"] .swiper-slide code {
   }
 }
 
+.expressive-code *:not(:is(svg, svg *)) {
+  font-family: revert;
+}
+
 a.pi:after {
   font-family: "FontAwesomeBrands";
   content: "\f7bb";
