Progress edit of C2 reference

--- a/src/components/CommonLink.astro
+++ b/src/components/CommonLink.astro
@@ -4,7 +4,7 @@ const { type } = Astro.props;
 const commonLinks = {
 
   "syntaxDiagramGuide" : {
-    text: "How should I read this?",
+    text: "How do I read this?",
     link: "/book/appendix/1-syntax/01-how-to-read/",
     class: "rightSmall",
   },
