Carousel alignment change

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -27,7 +27,7 @@ const { onNextTest="true", id="", animation="slide", buttonLayout="side", panelA
         place-items: center center;
     }
     .track-alignment-top {
-        place-items: start start;
+        place-items: normal;
     }
 
     .track-slide {
