Improve CodeActivity and Aside theming

--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -134,7 +134,7 @@ document.querySelectorAll("[data-aside-unfold] > details").forEach((el) => {
 }
 
 ::global(html[data-theme="light"] .starlight-aside--translucent-green > .starlight-aside__title, html[data-theme="light"] .starlight-aside--translucent-green .starlight-aside__title) {
-  color: #567840;
+  color: var(--sl-color-text-accent);
   font-weight: 800;
 }
 
