--- a/src/components/CodeActivity.astro
+++ b/src/components/CodeActivity.astro
@@ -75,7 +75,7 @@ const parameters = Object.entries({
     data-projectname={projectName}
     data-transient={transient}
 >
-    <Aside type="execute" title={header} unfold expand>
+    <Aside type="execute" title={header} unfold expandWide>
         <slot />
         <div data-embed-container class="ide-embed-container">
             <a data-open-in-ide-button class="open-in-ide-button" target="_blank" title="Open in full IDE">
